<resources>
    <string name="app_name">MedAlerta</string>
    <string name="prefix_number">+34</string>
    <string name="informaci_n_de_login">Información de Login</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="motivoConsulta">Motivo de la consulta</string>
    <string name="dni">DNI</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="duracionCita">Duracion(min)</string>
    <string name="registrar">Registrar</string>
    <string name="seleccionarFechaNacimiento">Seleccionar fecha de nacimiento</string>
    <string name="apellidos">Apellidos</string>
    <string name="crear_una_cuenta"><u>Crear cuenta</u></string>
    <string name="change_password"><u>Cambiar contraseña</u></string>
    <string name="question_password"><u>¿Has olvidado la contraseña?</u></string>
    <string name="todo">TODO</string>
    <string name="channel_id">canal_id</string>
    <string name="channel_name">Nombre del canal</string>
    <string name="channel_description">Descripción del canal</string>
    <string name="select_doctor">Seleccione el doctor</string>
</resources>