<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="Edita tus datos personales"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/idName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:height="48dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/idSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:height="48dp"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/fecha_de_nacimiento"
            android:inputType="date"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:height="48dp"
            android:hint="Calle, Portal, Piso, Número o Letra"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/c_digo_postal"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prefix_number"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/changePasswordId"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/red" />
        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar información"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>